--- a/55.md
+++ b/55.md
@@ -1,6 +1,9 @@
 <!--{"pinCode":true,"dname":"9cd7bd24-822f-431e-891f-80561fcf5448","codeMode":"markdown"}-->
 ```markdown
-
+| name   | quantity |
+| ------ | -------- |
+| apples | 12       |
+| pears  | 34       |
 ```
 
 <!--{"pinCode":true,"dname":"41485244-32a0-41d3-ad3c-abcbed1090fa","codeMode":"js"}-->
