--- a/55.md
+++ b/55.md
@@ -1,3 +1,71 @@
+``` antChart
+{
+ "chartConfigs": {
+  "00313c75-9edc-466a-bb08-db29ab67b771": {
+   "chartKey": "00313c75-9edc-466a-bb08-db29ab67b771",
+   "createTime": 1768911533985,
+   "renderType": "Markdown",
+   "active": true,
+   "fetchPeriod": 0,
+   "plotCode": "",
+   "text": "",
+   "selectedCategoryFrom": "",
+   "selectedCategory": "",
+   "selectedProperties": [],
+   "selectedDb": "",
+   "chartData": [],
+   "emptyFills": {},
+   "castColumns": {},
+   "joinColumns": {},
+   "createColumns": {},
+   "configColumns": {},
+   "chartColumns": [],
+   "type": "",
+   "options": {}
+  }
+ },
+ "layouts": {
+  "lg": [
+   {
+    "w": 6,
+    "h": 12,
+    "x": 0,
+    "y": 0,
+    "i": "00313c75-9edc-466a-bb08-db29ab67b771",
+    "minW": 2,
+    "minH": 3,
+    "moved": false,
+    "static": false,
+    "isDraggable": true,
+    "isResizable": true
+   },
+   {
+    "w": 3,
+    "h": 4,
+    "x": 6,
+    "y": 0,
+    "i": "add",
+    "minW": 2,
+    "minH": 3,
+    "moved": false,
+    "static": false,
+    "isDraggable": false,
+    "isResizable": false
+   }
+  ],
+  "sm": [],
+  "xxs": []
+ },
+ "dname": "2d9d135b-c681-454f-b9af-82358b928a51",
+ "lock": false,
+ "breakPoints": {
+  "lg": 1200,
+  "sm": 768,
+  "xxs": 0
+ }
+}
+```
+
 <!--{"pinCode":true,"dname":"9cd7bd24-822f-431e-891f-80561fcf5448","codeMode":"markdown"}-->
 ```markdown
 | name   | quantity |
