--- a/55.md
+++ b/55.md
@@ -4,14 +4,65 @@
   "00313c75-9edc-466a-bb08-db29ab67b771": {
    "chartKey": "00313c75-9edc-466a-bb08-db29ab67b771",
    "createTime": 1768911533985,
-   "renderType": "Markdown",
+   "renderType": "Chart",
    "active": true,
    "fetchPeriod": 0,
+   "tb": {
+    "filters": [
+     {}
+    ],
+    "sorts": [
+     {}
+    ],
+    "slice": {
+     "to": 100,
+     "from": 0
+    }
+   },
+   "mongo": {
+    "collectionName": "",
+    "filter": {},
+    "filterTmp": {},
+    "filterStr": "{}",
+    "projection": {},
+    "projectionStr": "{}",
+    "column": [],
+    "lowerBound": "min",
+    "upperBound": "max",
+    "isObjectId": true,
+    "limit": 1000,
+    "sort": {},
+    "sortStr": "{}",
+    "skip": 0
+   },
+   "dynamo": {
+    "tab": 0,
+    "scanFilterTmp": [
+     {}
+    ],
+    "scanFilterStr": "{}",
+    "TableName": "",
+    "IndexName": "",
+    "Select": "ALL_ATTRIBUTES",
+    "AttributesToGet": [],
+    "ConditionalOperator": "AND",
+    "ScanFilter": {},
+    "Limit": 1000
+   },
+   "neo": {
+    "selectionType": "",
+    "nodeLabel": "",
+    "propertyName": "",
+    "propertyValue": ""
+   },
    "plotCode": "",
    "text": "",
-   "selectedCategoryFrom": "",
-   "selectedCategory": "",
-   "selectedProperties": [],
+   "selectedCategoryFrom": "files",
+   "selectedCategory": "files/Superstore.csv",
+   "selectedProperties": [
+    "Profit",
+    "City"
+   ],
    "selectedDb": "",
    "chartData": [],
    "emptyFills": {},
@@ -21,7 +72,28 @@
    "configColumns": {},
    "chartColumns": [],
    "type": "",
-   "options": {}
+   "options": {
+    "title": {
+     "text": "empty chart title",
+     "size": {
+      "displayConfig": {
+       "type": "Select"
+      },
+      "selector": [
+       "h1",
+       "h2",
+       "h3",
+       "h4",
+       "h5",
+       "h6"
+      ],
+      "value": "h6"
+     }
+    },
+    "description": {
+     "text": "a simple empty chart"
+    }
+   }
   }
  },
  "layouts": {
