--- a/55.md
+++ b/55.md
@@ -71,28 +71,10 @@
    "createColumns": {},
    "configColumns": {},
    "chartColumns": [],
-   "type": "",
+   "type": "Stack Histogram",
    "options": {
-    "title": {
-     "text": "empty chart title",
-     "size": {
-      "displayConfig": {
-       "type": "Select"
-      },
-      "selector": [
-       "h1",
-       "h2",
-       "h3",
-       "h4",
-       "h5",
-       "h6"
-      ],
-      "value": "h6"
-     }
-    },
-    "description": {
-     "text": "a simple empty chart"
-    }
+    "binField": "Profit",
+    "stackField": "City"
    }
   }
  },
